Se corrigen estilos para mejor responsividad

--- a/css/_components.scss
+++ b/css/_components.scss
@@ -40,7 +40,6 @@ main {
     .messageContainer {
         box-sizing: border-box;
         height: 100%;
-        border: $thirdthColor solid 2px;
         border-radius: 10px;
         display: flex;
         flex-direction: column-reverse;
@@ -72,11 +71,11 @@ main {
         padding: 10px;
         box-sizing: border-box;
         background-color: $thirdthColor;
-        /* position: fixed;
-        width: 100%;
-        padding: 10px;
+
+        position: fixed;
+        bottom: 0;
         left: 0;
-        bottom: 10px; */
+        width: -webkit-fill-available;
 
 
 
