Se pulen un poco más los estilos

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -12,6 +12,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: $primaryColor;
     box-sizing: border-box;
 
@@ -34,7 +36,9 @@ header {
 
 main {
     margin-top: 99px;
-   /*  height: calc(100dvh - 99px); */
+
+    width: 80%;
+    max-width: 900px;
     box-sizing: border-box;
     padding: 10px;
     display: grid;
